# example-rs

./: .gitignore  Cargo.toml  README.md
example-wasm/: .gitignore  Cargo.toml  index.js  package.json  webpack.config.js
example-wasm/src/: lib.rs
libexample-sys/: Cargo.toml  build.rs
libexample-sys/libexample/: example.c  example.h
libexample-sys/src/: bindings.rs  lib.rs
settings/: default.toml
src/: app_state.rs  json_error.rs  main.rs  settings.rs
src/comment/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/kafka/: service.rs
src/search/: controller.rs  mod.rs  model.rs  query.rs  repository.rs  service.rs
src/status/: controller.rs  mod.rs  model.rs
src/utils/: auth_middleware.rs
