[package]
name = "example-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.2.0"
env_logger = "0.9"
json = "0.12"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["macros"] }
ntex = { version = "0.5.21", features = ["tokio"] }
config = "0.13.1"
lazy_static = "1.4.0"
elasticsearch = "7.10.1-alpha.1"
