[package]
name = "example-wasm"
version = "0.1.0"
edition = "2018"
description = "wasm experiments"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "^1.0.140"

[dependencies.web-sys]
version = "0.3.59"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response'
]